tools/tests/errors/surf_cls_07.ki
# indexing an instance that defines no _getitem_ is an error
class C:
    var _init_ = Function(self):
        self.x = 1
var c = C()
discard c[0]
